--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             left: 0;
             width: 200%;
             height: 100%;
-            background: url(../image/Epinephelus_malabaricus.jpg);
+            background: url(image/Epinephelus_malabaricus.jpg);
             background-attachment: fixed;
             background-size: cover;
             background-position: center; 
@@ -94,7 +94,7 @@
         <header class="sticky top-0 z-50 flex items-center justify-between border-b border-solid border-blue-100 bg-white/90 backdrop-blur-md px-6 py-4 dark:border-blue-900 dark:bg-background-dark/90 lg:px-20">
             <div class="flex items-center gap-4 text-text-main dark:text-white">
                 <div class="flex size-12 items-center justify-center">
-                    <img src="../image/logo.png" alt="" class="w-sm">
+                    <img src="image/logo.png" alt="" class="w-sm">
                 </div>
                 <div>
                     <h2 class="text-xl font-bold leading-tight tracking-tight text-ocean dark:text-white">EcoCatch</h2>
@@ -134,7 +134,7 @@
                 </h2>
                 <div class="mt-4 flex flex-col items-center justify-center gap-4 sm:flex-row">
                     <button class="group flex h-12 w-full min-w-[160px] cursor-pointer items-center justify-center gap-2 rounded-lg bg-gradient-to-r from-primary to-secondary px-6 text-base font-bold text-white transition-all hover:scale-105 hover:shadow-xl hover:shadow-primary/30 shadow-lg shadow-primary/20">
-                        <a href="login.html">انضم إلينا الآن</a>
+                        <a href="html/login.html">انضم إلينا الآن</a>
                         <span class="material-symbols-outlined text-[20px] transition-transform group-hover:translate-x-1">arrow_back</span>
                     </button>
                     <button class="flex h-12 w-full min-w-[160px] cursor-pointer items-center justify-center gap-2 rounded-lg bg-white/20 px-6 text-base font-bold text-white backdrop-blur-sm transition-all hover:bg-white/30 hover:shadow-lg sm:w-auto border border-white/30">
@@ -214,7 +214,7 @@
                         <div class="relative h-48 overflow-hidden">
                             <div class="h-full w-full bg-gradient-to-br from-blue-400 to-cyan-400"></div>
                             <div class="absolute inset-0 flex items-center justify-center">
-                                <img src="../image/Oreochromis-niloticus-Nairobi.jpg" alt="">
+                                <img src="image/Oreochromis-niloticus-Nairobi.jpg" alt="">
                             </div>
                             <div class="absolute top-4 right-4 rounded-full bg-white/90 px-3 py-1 text-xs font-bold text-primary backdrop-blur-sm">مياه عذبة</div>
                         </div>
@@ -232,7 +232,7 @@
                         <div class="relative h-48 overflow-hidden">
                             <div class="h-full w-full bg-gradient-to-br from-cyan-400 to-blue-500"></div>
                             <div class="absolute inset-0 flex items-center justify-center">
-                                <img src="../image/Epinephelus_malabaricus.jpg" alt="">
+                                <img src="image/Epinephelus_malabaricus.jpg" alt="">
                             </div>
                             <div class="absolute top-4 right-4 rounded-full bg-white/90 px-3 py-1 text-xs font-bold text-primary backdrop-blur-sm">مياه مالحة</div>
                         </div>
@@ -250,7 +250,7 @@
                         <div class="relative h-48 overflow-hidden">
                             <div class="h-full w-full bg-gradient-to-br from-blue-500 to-indigo-500"></div>
                             <div class="absolute inset-0 flex items-center justify-center">
-                                <img src="../image/download.jpg" alt="">
+                                <img src="image/download.jpg" alt="">
                             </div>
                             <div class="absolute top-4 right-4 rounded-full bg-white/90 px-3 py-1 text-xs font-bold text-primary backdrop-blur-sm">مياه عميقة</div>
                         </div>
