--- a/html/login.html
+++ b/html/login.html
@@ -14,24 +14,24 @@
         </div>
         <div class="w-2/4 h-screen flex justify-items-center justify-center items-center mr-auto ml-auto">
             <div class="flex flex-col gap-3">
-                <h1 class="font-bold text-5xl text-green-600">Welcome Back!</h1>
+                <h1 class="font-bold text-5xl text-green-600">Content de te revoir!</h1>
                 <h3>Email Address</h3>
                 <div class="p-2 border-1">
                     <i class="fa-solid fa-envelope"></i>
                     <input type="text" placeholder="you@gmail.com" class="outline-none pl-3">
                 </div>
-                <h3>password</h3>
+                <h3>mot de passe</h3>
                 <div class="p-2 border-1">
                     <i class="fa-solid fa-lock"></i>
-                    <input type="password" placeholder="password" class="w-1/2 h-full outline-none pl-3">
+                    <input type="password" placeholder="mot de passe?" class="w-1/2 h-full outline-none pl-3">
                 </div>
-                <a href="#" class="text-green-600">Forgot Password?</a>
+                <a href="#" class="text-green-600">mot de passe oublie?</a>
                 <div class="flex gap-2">
                     <input type="checkbox" class="bg-green-600 w-5">
-                    <h3>Remember me</h3>
+                    <h3>Souviens-toi de moi</h3>
                 </div>
-                <button class="bg-green-600 h-14 pl-40 pr-40 pb-4 pt-4 rounded-lg text-white font-semibold hover:bg-green-500"><a href="Post.html">Login</a></button>
-                <p class="text-center">Don't have an account? <a href="#" class="text-green-600"> Register now</a></p>
+                <button class="bg-green-600 h-14 pl-40 pr-40 pb-4 pt-4 rounded-lg text-white font-semibold hover:bg-green-500"><a href="Post.html">Se connecter</a></button>
+                <p class="text-center">Vous n'avez pas de compte ? <a href="#" class="text-green-600">Inscrivez-vous maintenant</a></p>
             </div>       
         </div>
     </section>
